hphp/hack/test/typecheck/argument_unpacking/unpack_call12_infer.php.legacy.exp
File "unpack_call12_infer.php", line 18, characters 21-22:
Invalid argument (Typing[4110])
  File "unpack_call12_infer.php", line 22, characters 32-34:
  This is an int
  File "unpack_call12_infer.php", line 15, characters 28-32:
  It is incompatible with a string
